# tairitsu

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  celestia-devtools.just  deny.toml  justfile  package.json  release.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  clippy.yml  docs.yml  fmt.yml  pr-title-check.yml  publish.yml  test.yml  visual-regression.yml  wit-sync.yml
docs/: lagrange.toml
docs/ar/: index.md
docs/ar/guides/: index.md
docs/es/: index.md
docs/es/guides/: index.md
docs/fr/: index.md
docs/fr/guides/: index.md
docs/ja/: index.md  security.md
docs/ja/guides/: index.md
docs/ko/: index.md
docs/ko/guides/: index.md
docs/ru/: index.md
docs/ru/guides/: index.md
docs/zhs/: index.md
docs/zhs/guides/: index.md  quick-start.md
docs/zhs/system/: overview.md
docs/zht/: index.md
docs/zht/guides/: index.md
examples/kei-desktop/: Cargo.toml  README.md
examples/kei-desktop/src/: lib.rs
examples/todo-app/: Cargo.toml
examples/todo-app/src/: lib.rs
examples/vtty-graphics-demo/: Cargo.toml
examples/wasi-plugin/: Cargo.toml
examples/wasi-plugin/src/: lib.rs  main.rs
examples/website/: Cargo.toml
examples/website/src/: i18n.rs  markdown.rs
examples/website/src/components/: mod.rs
examples/website/src/pages/: home.rs  not_found.rs
examples/website/src/styles/: main.scss
examples/wit-compile-time/: Cargo.toml
examples/wit-dynamic-advanced/: Cargo.toml
examples/wit-dynamic-advanced/src/: guest.rs  main.rs
examples/wit-native-macro/: Cargo.toml
examples/wit-native-simple/: Cargo.toml
examples/wit-native-simple/src/: demo.rs  host.rs
examples/wit-runtime/: Cargo.toml
scripts/: build_cdn_demo.py  build_npm_glue_packages.py  build_wasm_packages.py  changelog.py  download_wasi_adapters.py  fetch_w3c_idl.py  generate_browser_glue.py  generate_browser_wit.py  init_browser_glue.py  publish_crates.py  publish_live.py  test_wit_generation.py  type_mapper.py  visual_capture.py  webidl_to_wit.py  wit_parser.py
scripts/generator/: __init__.py  ast_parser.py  code_gen.py  config.py  logger.py  models.py
