[workspace]
members = [
    "packages/browser",
    "packages/runtime",
    "packages/macros",
    "packages/vdom",
    "packages/web",
    "packages/hooks",
    "packages/packager",
    "packages/style",
    "packages/browser-wit-resolver",
    "packages/browser-worlds",
    "packages/browser-test",
    "packages/browser-fetch",
    "packages/ssr",
    "packages/mcp",

    "examples/wit-compile-time",
    "examples/wit-runtime",
    "examples/wit-dynamic-advanced",
    "examples/wit-native-simple",
    "examples/wit-native-macro",
    "examples/vtty-graphics-demo",
    "examples/todo-app",
    "examples/wasi-plugin",
    "examples/website",
    "examples/kei-desktop",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "unwind"
strip = true

[profile.dev-wasm]
inherits = "release"
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.5.18"
authors = ["langyo <langyo.china@gmail.com>"]
edition = "2021"
rust-version = "1.91"
license-file = "LICENSE"
repository = "https://github.com/celestia-island/tairitsu"

[workspace.dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "^1"
tracing = "^0.1"
thiserror = "^2"
clap = { version = "^4", features = ["derive"] }
tokio = { version = "^1", default-features = false, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
    "signal",
] }
wasmtime = { version = "^45", features = ["component-model", "winch"] }
wasmtime-wasi = "^45"
reqwest = { version = "^0.13", default-features = false, features = ["json", "blocking"] }
tairitsu = { version = "^0.5.14", path = "packages/runtime" }
tairitsu-macros = { version = "^0.5.14", path = "packages/macros" }
tairitsu-vdom = { version = "^0.5.14", path = "packages/vdom" }
tairitsu-hooks = { version = "^0.5.14", path = "packages/hooks" }
tairitsu-style = { version = "^0.5.14", path = "packages/style" }
tairitsu-ssr = { version = "^0.5.14", path = "packages/ssr" }
tairitsu-web = { version = "^0.5.14", path = "packages/web" }
tairitsu-browser-worlds = { version = "^0.5.14", path = "packages/browser-worlds" }
tairitsu-browser-wit-resolver = { version = "^0.5.14", path = "packages/browser-wit-resolver" }
tairitsu-browser-fetch = { version = "^0.5.14", path = "packages/browser-fetch" }
tairitsu-packager = { version = "^0.5.14", path = "packages/packager" }
bytes = "^1"
sha2 = "^0.10"
hex = "^0.4"
futures = "^0.3"
tracing-subscriber = "^0.3"
regex = "^1"
toml = "^1.1"
grass = "^0.13"
wit-parser = "^0.252"
wit-component = "^0.252"
wit-bindgen = { version = "^0.57", features = ["macros"] }
tempfile = "^3"
vte = "^0.15"
portable-pty = "^0.8"
image = "^0.25"
base64 = "^0.22"
crossterm = "^0.28"
chrono = { version = "^0.4", default-features = false, features = ["clock", "serde"] }
libc = "^0.2"
indicatif = "^0.18"
zip = { version = "^8", default-features = false, features = ["deflate"] }
async-trait = "^0.1"
axum = "^0.8"
tower-http = "^0.6"
tokio-stream = { version = "^0.1", default-features = false }
dirs = "^6"
which = "^8"
uuid = { version = "^1.11", features = ["v4"] }
rand = "^0.8"
windows-sys = { version = "0.61", default-features = false }
env_logger = "^0.11"
log = "^0.4"

# ── Local patches ────────────────────────────────────────────
# Redirect hikari git deps + crates.io tairitsu-* to local source trees so
# the whole graph uses one copy of tairitsu-browser-worlds (avoiding the
# `links` conflict) and consistent versions.

[patch.crates-io]
tairitsu = { path = "packages/runtime" }
tairitsu-vdom = { path = "packages/vdom" }
tairitsu-hooks = { path = "packages/hooks" }
tairitsu-macros = { path = "packages/macros" }
tairitsu-style = { path = "packages/style" }
tairitsu-browser-worlds = { path = "packages/browser-worlds" }

[patch."https://github.com/celestia-island/hikari.git"]
hikari-palette = { path = "../hikari/packages/palette" }
hikari-components = { path = "../hikari/packages/components" }
hikari-icons = { path = "../hikari/packages/icons" }
