[workspace]
members = [
    "packages/browser",
    "packages/runtime",
    "packages/macros",
    "packages/vdom",
    "packages/web",
    "packages/hooks",
    "packages/packager",
    "packages/style",
    "packages/browser-wit-resolver",
    "packages/browser-worlds",
    "packages/browser-test",
    "packages/browser-fetch",
    "packages/ssr",
    "packages/mcp",

    "examples/wit-compile-time",
    "examples/wit-runtime",
    "examples/wit-dynamic-advanced",
    "examples/wit-native-simple",
    "examples/wit-native-macro",
    "examples/vtty-graphics-demo",
    "examples/todo-app",
    "examples/wasi-plugin",
    "examples/website",
    "examples/kei-desktop",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "unwind"
strip = true

[profile.dev-wasm]
inherits = "release"
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.5.19"
authors = ["langyo <langyo.china@gmail.com>"]
edition = "2021"
rust-version = "1.91"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/celestia-island/tairitsu"

[workspace.dependencies]

tairitsu = { version = "^0.5.14", path = "packages/runtime" }
tairitsu-browser-fetch = { version = "^0.5.14", path = "packages/browser-fetch" }
tairitsu-browser-wit-resolver = { version = "^0.5.14", path = "packages/browser-wit-resolver" }
tairitsu-browser-worlds = { version = "^0.5.14", path = "packages/browser-worlds" }
tairitsu-hooks = { version = "^0.5.14", path = "packages/hooks" }
tairitsu-macros = { version = "^0.5.14", path = "packages/macros" }
tairitsu-packager = { version = "^0.5.14", path = "packages/packager" }
tairitsu-ssr = { version = "^0.5.14", path = "packages/ssr" }
tairitsu-style = { version = "^0.5.14", path = "packages/style" }
tairitsu-vdom = { version = "^0.5.14", path = "packages/vdom" }
tairitsu-web = { version = "^0.5.14", path = "packages/web" }

anyhow = "^1"
async-trait = "^0.1"
axum = "^0.8"
base64 = "^0.22"
bytes = "^1"
chrono = { version = "^0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "^4", features = ["derive"] }
crossterm = "^0.28"
dirs = "^6"
env_logger = "^0.11"
futures = "^0.3"
grass = "^0.13"
hex = "^0.4"
image = "^0.25"
indicatif = "^0.18"
libc = "^0.2"
log = "^0.4"
portable-pty = "^0.8"
rand = "^0.8"
regex = "^1"
reqwest = { version = "^0.13", default-features = false, features = ["json", "blocking", "rustls"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sha2 = "^0.10"
tempfile = "^3"
thiserror = "^2"
tokio = { version = "^1", default-features = false, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
    "signal",
] }
tokio-stream = { version = "^0.1", default-features = false }
toml = "^1.1"
tower-http = "^0.6"
tracing = "^0.1"
tracing-subscriber = "^0.3"
uuid = { version = "^1.11", features = ["v4"] }
vte = "^0.15"
wasmtime = { version = "^45", features = ["component-model", "winch"] }
wasmtime-wasi = "^45"
which = "^8"
windows-sys = { version = "0.61", default-features = false }
wit-bindgen = { version = "^0.57", features = ["macros"] }
wit-component = "^0.252"
wit-parser = "^0.252"
zip = { version = "^8", default-features = false, features = ["deflate"] }
[patch.crates-io]
tairitsu = { path = "packages/runtime" }
tairitsu-vdom = { path = "packages/vdom" }
tairitsu-hooks = { path = "packages/hooks" }
tairitsu-macros = { path = "packages/macros" }
tairitsu-style = { path = "packages/style" }
tairitsu-browser-worlds = { path = "packages/browser-worlds" }

[patch."https://github.com/celestia-island/hikari.git"]
hikari-palette = { path = "../hikari/packages/palette" }
hikari-components = { path = "../hikari/packages/components" }
hikari-icons = { path = "../hikari/packages/icons" }
