[package]
name = "tairitsu-example-todo-app"
version = "0.1.0"
license = "MIT"
edition.workspace = true
publish = false

[dependencies]

tairitsu-hooks = { path = "../../packages/hooks" }
tairitsu-macros = { path = "../../packages/macros" }
tairitsu-vdom = { path = "../../packages/vdom" }
[lib]
crate-type = ["rlib"]
