[package]
name = "tairitsu-example-wit-native-macro"
version = "0.1.0"
license = "MIT"
edition.workspace = true
publish = false
authors = ["langyo <langyo.china@gmail.com>"]

# This example demonstrates proc-macro based automatic WIT enum generation
# Includes both standalone demos and full WASM bidirectional communication

[dependencies]
# Basic language and tools
anyhow = { workspace = true }

# Data and serialization
rand = "^0.8"
serde = { workspace = true }
serde_json = { workspace = true }

# Logging and tracing
env_logger = "^0.11"
log = { version = "^0.4", features = ["std"] }

# For native builds (macros re-exported from runtime)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Workspace dependencies
tairitsu = { path = "../../packages/runtime" }
tairitsu-web = { path = "../../packages/web", features = ["full"] }

# For WASM guest builds
[target.'cfg(target_family = "wasm")'.dependencies]
# MCP / network and protocols
wit-bindgen = { version = "^0.57", features = ["macros"] }

[lib]
# Library is used for the WASM guest side
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "macro-demo"
path = "src/demo.rs"

[[bin]]
name = "macro-host"
path = "src/host.rs"

[[bin]]
name = "macro-wasm-host"
path = "src/wasm_host.rs"

[features]
default = []
