[package]
name = "tairitsu-example-wit-native-simple"
version = "0.1.0"
edition.workspace = true
publish = false
authors = ["langyo <langyo.china@gmail.com>"]

# This example demonstrates simple trait-based composable WIT interfaces
# without runtime serialization
# Includes both standalone demos and full WASM bidirectional communication

[dependencies]
# Basic language and tools
anyhow = { workspace = true }

# Data and serialization
rand = "^0.8"
serde = { workspace = true }
serde_json = { workspace = true }

# Logging and tracing
env_logger = "^0.11"
log = { version = "^0.4", features = ["std"] }

# For native builds (host and native testing)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Workspace dependencies
tairitsu = { path = "../../packages/runtime" }
tairitsu-web = { path = "../../packages/web", features = ["full"] }

# MCP / network and protocols
wit-bindgen = "^0.57"
wit-component = "^0.252"

# For WASM guest builds
[target.'cfg(target_family = "wasm")'.dependencies]
# MCP / network and protocols
wit-bindgen = { version = "^0.57", features = ["macros"] }

[lib]
# Library is used for the WASM guest side
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "simple-demo"
path = "src/demo.rs"

[[bin]]
name = "simple-host"
path = "src/host.rs"

[[bin]]
name = "simple-wasm-host"
path = "src/wasm_host.rs"

[features]
default = []
