[package]
name = "tairitsu-example-wit-runtime"
version = "0.1.0"
license = "MIT"
edition.workspace = true
publish = false
authors = ["langyo <langyo.china@gmail.com>"]

[dependencies]

# Workspace dependencies
tairitsu = { path = "../../packages/runtime" }
tairitsu-web = { path = "../../packages/web", features = ["full"] }

# Basic language and tools
anyhow = { workspace = true }
# Logging and tracing
env_logger = "^0.11"
log = { version = "^0.4", features = ["std"] }
# Data and serialization
rand = "^0.8"
[[bin]]
name = "runtime-demo"
path = "src/main.rs"
